changed color scheme back